Fix scrollbar, Move instructions to right of schedule, and open link in new tab

--- a/shuttle/static/assets/css/shuttle.css
+++ b/shuttle/static/assets/css/shuttle.css
@@ -103,8 +103,7 @@ nav.navbar {
 }
 
 .scrolling-wrapper {
-  overflow-x: scroll;
-  overflow-y: hidden;
+  overflow: auto;
   white-space: nowrap;
 }
 
@@ -154,4 +153,12 @@ span.shuttle-title {
 
 .table {
     margin-bottom: 0;
+}
+
+.wrapper {
+    display: inline-flex;
+}
+
+.caption-card {
+    display: table-caption;
 }
